# aldea-dao-nft-marketplace-plutus

./: PABSimulator.txt  README.md  aldea-dao-nft-marketplace.cabal  cabal -7d18892fba2181456700ba5806566ce4eefdee15.project  nft-marketplace-plutus.code-workspace
app/: deploy.hs
export/: datum.json  redemer.json
export/files/: MarketNFT-HEX.addr  MarketNFT-Mainnet.addr  MarketNFT-Testnet.addr  MarketNFT.hash  MarketNFT.plutus
export/files/MarketNFT2/: Main-HEX.addr  Main-Mainnet.addr  Main-Testnet.addr  Main.hash  Main.plutus  PABParams-HEX.json  PABParamsExtras-HEX.json  Protocol-HEX.addr  Protocol-Mainnet.addr  Protocol-Testnet.addr  Protocol.hash  Protocol.plutus  ProtocolID.plutus  ProtocolID.symbol
export/files10/: MarketNFT-Main-HEX.addr  MarketNFT-Main-Testnet.addr  MarketNFT-Main.hash  MarketNFT-Protocol.hash  MarketNFT-ProtocolID.symbol
export/files11/: MarketNFT-Main-Mainnet.addr  MarketNFT-Main.plutus  MarketNFT-Protocol-HEX.addr  MarketNFT-Protocol-Mainnet.addr  MarketNFT-Protocol-Testnet.addr  MarketNFT-Protocol.plutus  MarketNFT-ProtocolID.plutus
export/files2/: MarketNFT-HEX.addr  MarketNFT-Mainnet.addr  MarketNFT-Testnet.addr  MarketNFT.hash  MarketNFT.plutus
export/files4/: MarketNFT-HEX.addr  MarketNFT-Mainnet.addr  MarketNFT-Testnet.addr  MarketNFT.hash  MarketNFT.plutus
export/files5/: MarketNFT-HEX.addr  MarketNFT-Mainnet.addr  MarketNFT-Testnet.addr  MarketNFT.hash  MarketNFT.plutus
export/files6/: MarketNFT-HEX.addr  MarketNFT-Mainnet.addr
export/files7/: MarketNFT-Testnet.addr  MarketNFT.hash  MarketNFT.plutus
export/files8/: MarketNFT-HEX.addr  MarketNFT-Mainnet.addr  MarketNFT-Testnet.addr  MarketNFT.hash  MarketNFT.plutus
src/: Deploy.hs  MarketNFTV2.hs  TestWithPABSimulator.hs  TestWithTraceEmulator.hs  Utils.hs
src/MarketNFTV2/: Deploy.hs  Helpers.hs  HelpersOffChain.hs  OffChain.hs  OffChainEval.hs  OnChain.hs  PABHelpers.hs  PABSimulator.hs  ProtocolIDPolicy.hs  TraceEmulator.hs  Types.hs
src/Validators/: MarketNFTV2.hs
src/Validators/MarketNFTV2/: Helpers.hs  OffChain.hs  OnChain.hs  PAB.hs  ProtocolIDPolicy.hs  TestWithPABSimulator.hs  Types.hs
